# csa-almaty-bot

./: .editorconfig  .env.example  .gitignore  LICENCE  Procfile  README.md  config.py  dump.rdb  pyproject.toml  requirements.txt
project/: __main__.py  bot.py  models.py  utils.py
project/handlers/: __init__.py
project/handlers/helpers/: __init__.py  help.py  start.py
project/handlers/menu/: __init__.py  menu.py
project/handlers/menu_keyboard/: __init__.py  menu.py
project/handlers/questions/: __init__.py
project/handlers/search/: __init__.py  keyboard.py
project/keyboards/: __init__.py  menu.py  search.py
project/services/: __init__.py  categories.py  data.py  questions.py
