[tool.poetry]
name = "act_bot"
version = "0.1.0"
description = ""
authors = ["Kostya Nikiforov <kostya.nik.3854@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.9.2"
python-dotenv = "^0.14.0"
aioredis = "^1.3.1"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
autopep8 = "^1.5.4"
flake8-isort = "^4.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
